{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 159,
  "lineage": "ba32fb3d-78e1-2c85-1f1a-a3d98ff013ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:internet-gateway/igw-0b59b6573fa46dfd1",
            "id": "igw-0b59b6573fa46dfd1",
            "owner_id": "679711130733",
            "tags": {
              "Name": "dev_web_igw"
            },
            "tags_all": {
              "Name": "dev_web_igw"
            },
            "vpc_id": "vpc-0e2a4f9f16e4da3e5"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:route-table/rtb-05f50703e9d8c4703",
            "id": "rtb-05f50703e9d8c4703",
            "owner_id": "679711130733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b59b6573fa46dfd1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_web_rt"
            },
            "tags_all": {
              "Name": "dev_web_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2a4f9f16e4da3e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_web_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_web_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f126bcab56f49a1a",
            "route_table_id": "rtb-05f50703e9d8c4703",
            "subnet_id": "subnet-0592b930c3effb26c"
          },
          "dependencies": [
            "aws_internet_gateway.dev_web_igw",
            "aws_route_table.dev_web_rt",
            "aws_subnet.dev_web_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_web_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9fdb12b736b65ab",
            "route_table_id": "rtb-05f50703e9d8c4703",
            "subnet_id": "subnet-0a55e80783a8ca318"
          },
          "dependencies": [
            "aws_internet_gateway.dev_web_igw",
            "aws_route_table.dev_web_rt",
            "aws_subnet.dev_web_subnet_1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:security-group/sg-0d18e1cbdcff45770",
            "description": "Security Group for Dev Web environment",
            "egress": [],
            "id": "sg-0d18e1cbdcff45770",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all ssh traffic from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_web_sg",
            "name_prefix": "",
            "owner_id": "679711130733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_web_sg"
            },
            "tags_all": {
              "Name": "dev_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2a4f9f16e4da3e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:subnet/subnet-0592b930c3effb26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0592b930c3effb26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679711130733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_web_subnet"
            },
            "tags_all": {
              "Name": "dev_web_subnet"
            },
            "vpc_id": "vpc-0e2a4f9f16e4da3e5"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_web_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:subnet/subnet-0a55e80783a8ca318",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55e80783a8ca318",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679711130733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_web_1_subnet"
            },
            "tags_all": {
              "Name": "dev_web_1_subnet"
            },
            "vpc_id": "vpc-0e2a4f9f16e4da3e5"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:vpc/vpc-0e2a4f9f16e4da3e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-053bd705695d48899",
            "default_route_table_id": "rtb-0fbb622c945ed3571",
            "default_security_group_id": "sg-071ff9086b15bb037",
            "dhcp_options_id": "dopt-04c8871ea0e1070a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2a4f9f16e4da3e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbb622c945ed3571",
            "owner_id": "679711130733",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}